# dornen

./: .gitignore  .gitmodules  .travis.yml  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
dorn/: __init__.py
dorn/etc/: notes.txt
dornen/: ScoreTemplate.py  __init__.py  __metadata__  __metadata__.py  library.py  stylesheet.ily  tools.py  trimmed
dornen/etc/: concatenations.txt  figures.txt  notes.txt  passiontide.tex  program-notes.rtf  program-notes.txt  stages.md  to-do.md  to-do.txt  transformations.txt
dornen/materials/: __abbreviations__.py  __init__.py
dornen/sections/: stylesheet.ily
dornen/segments/: __views__.py  stylesheet.ily
dornen/stylesheets/: context-definitions.ily  contexts.ily  default-instrument-names.ily  markups.ily  nonfirst-segment.ily  stylesheet.ily
dornen/test/: test_materials.py
dornen/tools/: DesignChecker.py  DesignMaker.py  FigureAccumulator.py  MusicAccumulator.py  QuartertoneCommand.py  QuartertoneManager.py  ScoreTemplate.py  __init__.py  anchor_music.py  anchors.py  default_music.py  delicatissimo.py  delicatissimo_music.py  design_1.py  design_2.py  design_3.py  final_markup.py  forty_eighth_music.py  forty_eighths.py  glissando_scatto.py  glissando_scatto_music.py  graced_rest_music.py  graced_tuplet_music.py  graced_tuplets.py  make_anchor_figure_maker.py  make_anchor_music_maker.py  make_default_figure_maker.py  make_default_music_maker.py  make_delicatissimo_figure_maker.py  make_delicatissimo_music_maker.py  make_design_1.py  make_design_2.py  make_design_3.py  make_final_markup.py  (+68 more)
(+839 files in other folders)
