[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dornen"
version = "3.24"
description = "Spiel der Dornen (2016) for guitar"
authors = [{ name = "Trevor BaÄa", email = "trevor.baca@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["abjad", "lilypond", "music composition", "music notation"]
dependencies = ["abjad>=3.24"]

[project.urls]
Homepage = "https://github.com/trevorbaca/dornen"

[tool.setuptools]
packages = ["dornen"]
package-dir = { "" = "source" }
